--- a/src/main/webapp/css/bookmarks.css
+++ b/src/main/webapp/css/bookmarks.css
@@ -1,11 +1,11 @@
-#bodywrapper .userMyBookmarksList .floatright{
+.bodywrapper .userMyBookmarksList .floatright{
 margin:0px 5px;
 }
 /******************************************************************************
 *  user My Bookmarks List
 ******************************************************************************/
 
-#bodywrapper ul.userMyBookmarksList  {
+.bodywrapper ul.userMyBookmarksList  {
 	position:relative;
 	margin:0;
 	margin-bottom:20px;
@@ -13,7 +13,7 @@ margin:0px 5px;
 	border:1px solid #ccc;
 	padding:0
 }
-#bodywrapper .userMyBookmarksList li {
+.bodywrapper .userMyBookmarksList li {
 	background-color:#e1e1e1;
 	border-color:#fff #fff #ccc ;
 	border-style:solid;
@@ -22,25 +22,25 @@ margin:0px 5px;
 	margin:0;
 	list-style:none
 }
-#bodywrapper .userMyBookmarksList li p {
+.bodywrapper .userMyBookmarksList li p {
 	padding:0;
 }
-#bodywrapper .userMyBookmarksList li:last-child {
+.bodywrapper .userMyBookmarksList li:last-child {
 	border-bottom-color:#fff;
 }
-#bodywrapper ul.userMyBookmarksList li:hover{
+.bodywrapper ul.userMyBookmarksList li:hover{
 	background-color:#eaeaea
 }
-#bodywrapper ul.userMyBookmarksList a,
-#bodywrapper ul.userMyBookmarksList a:link,
-#bodywrapper ul.userMyBookmarksList a:visited {
+.bodywrapper ul.userMyBookmarksList a,
+.bodywrapper ul.userMyBookmarksList a:link,
+.bodywrapper ul.userMyBookmarksList a:visited {
 	text-decoration: none;
 }
-#bodywrapper ul.userMyBookmarksList a:hover,
-#bodywrapper ul.userMyBookmarksList a:active {
+.bodywrapper ul.userMyBookmarksList a:hover,
+.bodywrapper ul.userMyBookmarksList a:active {
 	text-decoration:underline;
 }
-#bodywrapper a.userMyBookmarksListIcon {
+.bodywrapper a.userMyBookmarksListIcon {
 	background:transparent url(img/bookmark.png) no-repeat scroll 0.2em 0;
 	padding-left:24px;
 }
