--- a/src/main/webapp/css/bookmarks.css
+++ b/src/main/webapp/css/bookmarks.css
@@ -1,32 +1,31 @@
 .bodywrapper .userMyBookmarksList .floatright{
-margin:0px 5px;
+	margin:0px 5px;
 }
 /******************************************************************************
 *  user My Bookmarks List
 ******************************************************************************/
-
+.bodywrapper .userMyBookmarksList .small {
+	font-size:0.85em;
+	color:#999
+}
 .bodywrapper ul.userMyBookmarksList  {
 	position:relative;
 	margin:0;
-	margin-bottom:20px;
+	margin:1em;
 	list-style:none;
-	border:1px solid #ccc;
 	padding:0
 }
 .bodywrapper .userMyBookmarksList li {
-	background-color:#e1e1e1;
-	border-color:#fff #fff #ccc ;
-	border-style:solid;
-	border-width:1px;
+	border-bottom:1px dotted #ccc ;
 	padding:2px 5px;
 	margin:0;
-	list-style:none
+	list-style:none;
 }
 .bodywrapper .userMyBookmarksList li p {
 	padding:0;
 }
 .bodywrapper .userMyBookmarksList li:last-child {
-	border-bottom-color:#fff;
+	border-bottom-color:none;
 }
 .bodywrapper ul.userMyBookmarksList li:hover{
 	background-color:#eaeaea
