--- a/src/main/webapp/css/bookmarks.css
+++ b/src/main/webapp/css/bookmarks.css
@@ -1,45 +1,45 @@
-.bodywrapper .userMyBookmarksList .floatright{
+ .userMyBookmarksList .floatright{
 	margin:0px 5px;
 }
 /******************************************************************************
 *  user My Bookmarks List
 ******************************************************************************/
-.bodywrapper .userMyBookmarksList .small {
+ .userMyBookmarksList .small {
 	font-size:0.85em;
 	color:#999
 }
-.bodywrapper ul.userMyBookmarksList  {
+ ul.userMyBookmarksList  {
 	position:relative;
 	margin:0;
 	margin:1em;
 	list-style:none;
 	padding:0
 }
-.bodywrapper .userMyBookmarksList li {
+ .userMyBookmarksList li {
 	border-bottom:1px dotted #ccc ;
 	padding:2px 5px;
 	margin:0;
 	list-style:none;
 }
-.bodywrapper .userMyBookmarksList li p {
+ .userMyBookmarksList li p {
 	padding:0;
 }
-.bodywrapper .userMyBookmarksList li:last-child {
+ .userMyBookmarksList li:last-child {
 	border-bottom-color:none;
 }
-.bodywrapper ul.userMyBookmarksList li:hover{
+ ul.userMyBookmarksList li:hover{
 	background-color:#eaeaea
 }
-.bodywrapper ul.userMyBookmarksList a,
-.bodywrapper ul.userMyBookmarksList a:link,
-.bodywrapper ul.userMyBookmarksList a:visited {
+ ul.userMyBookmarksList a,
+ ul.userMyBookmarksList a:link,
+ ul.userMyBookmarksList a:visited {
 	text-decoration: none;
 }
-.bodywrapper ul.userMyBookmarksList a:hover,
-.bodywrapper ul.userMyBookmarksList a:active {
+ ul.userMyBookmarksList a:hover,
+ ul.userMyBookmarksList a:active {
 	text-decoration:underline;
 }
-.bodywrapper a.userMyBookmarksListIcon {
+ a.userMyBookmarksListIcon {
 	background:transparent url(img/bookmark.png) no-repeat scroll 0.2em 0;
 	padding-left:24px;
 }
